# rust-restaurant

./: .gitignore  Makefile  README.md  docker-compose.yml
restaurant-client/: Cargo.toml
restaurant-client/src/: main.rs
restaurant-server/: .env  Cargo.toml  restaurant-server.dockerfile
restaurant-server/src/: main.rs
restaurant-server/src/restaurant/: constants.rs  db.rs  handlers.rs  mod.rs  models.rs
restaurant-server/src/tests/: Testing.txt  get_items_test.rs
sql-query/: restaurant.sql
