[package]
name = "restaurant-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.188"
serde_derive = "1.0.188"
reqwest = { version = "0.11.0", features = ["blocking","json"] }
exitfailure = "0.5.1"
